# skirr

./: .gitignore  Cargo.toml  README.md  main.lua
.devcontainer/: devcontainer.json
scripts/: libgen.lua  quotes.lua  test.lua
src/: config.rs  lib.rs  main.rs  parsed_fragment.rs  scrape.rs
src/gui/: mod.rs  settings.rs
